--- a/templates/empresa/list_empresa.html
+++ b/templates/empresa/list_empresa.html
@@ -72,7 +72,7 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody>
-                                                        {% for empresa in data.empresas %}
+                                                        {% for empresa in datos.empresas %}
 
                                                         <tr>
                                                             <td>{{empresa.rutEmpresa}}</td>
