Envia correos a mas de 1 destinatario

--- a/templates/base.html
+++ b/templates/base.html
@@ -274,7 +274,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a href="{% url 'workflownew' %}"
+                      <a href="{% url 'EmpresaAdd' %}"
                         class="nav-link {% if datos.menu == 'AddEmpresaSection' %} active {% endif %}">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Crear</p>
