--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -70,7 +70,7 @@
 												adjunta informacion de la tarea:
 												{% endif %}
 												{% if evento == 'Notificacion de Tarea' %}
-												Tenemos una tarea asignada a usted, la cual vence en menos de 5 dias.
+												Tenemos una tarea asignada a usted, la cual vence en menos de 5 o menos dias.
 												Se adjunta informacion de la tarea:
 
 												{% endif %}
