--- a/templates/teamwork/workload.html
+++ b/templates/teamwork/workload.html
@@ -55,7 +55,7 @@
                     <b>Tareas Atrasadas</b> <a class="float-right">8</a>
                   </li>
                   <li class="list-group-item">
-                    <b>Tareas Asignadas</b> <a class="float-right">{{datos.tareas|length}}</a>
+                    <b>Tareas Asignadas</b> <a class="float-right">{{datos.tareas}}</a>
                   </li>
                 </ul>
 
